--- a/config.yml
+++ b/config.yml
@@ -21,7 +21,12 @@ menu:
           weight: 3                
 
 params:
-    description: "I am a Professor of Statistics in the Department of Psychology at the University of Oslo, Norway. I am interested in latent variable models for analysis of longitudinal data in psychology, particularly on developing efficient computational algorithms and software. I also work on interpretable machine learning methods, and through various collaborations I am involved in a range of applied projects in psychology and neuroscience."
+    description: |
+        I am a Professor of Statistics in the Department of Psychology at the University of Oslo, Norway.
+        I am interested in latent variable models for analysis of longitudinal data in psychology,
+        particularly on developing efficient computational algorithms and software.
+        I also work on interpretable machine learning methods, and through various collaborations
+        I am involved in a range of applied projects in psychology and neuroscience.
     author: Øystein Sørensen
     DateFormat: "January 2006"
     defaultTheme: light
